fix(account): stop modals from growing too large
Design caps them at around 675 currently. Let's go 800 and see.

--- a/www/css/account.css
+++ b/www/css/account.css
@@ -236,6 +236,18 @@ body.theme-b {
   -ms-user-select: none;
 }
 
+/**
+ * account page specific modal things
+ */
+@media(min-width: 55rem) {
+  .account-layout .modal-open {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    max-width: 800px;
+  }
+}
+
 .plan-billing-container {
   display: flex;
   align-content: flex-start;
